--- a/carrinho.html
+++ b/carrinho.html
@@ -17,11 +17,11 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
 
     <!-- Libraries Stylesheet -->
-    <link href="lib/animate/animate.min.css" rel="stylesheet">
-    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+    <link href="content/bibliotecas_extra/animate/animate.min.css" rel="stylesheet">
+    <link href="content/bibliotecas_extra/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
 
     <!-- Css bootstrap customizável -->
-    <link href="css/style.css" rel="stylesheet">
+    <link href="content/css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -132,7 +132,7 @@
                     <tbody class="align-middle">
                         <tr>
                             <td class="align-middle"><img src="img/product-5.jpg" alt="" style="width: 50px;"> Nome do produto</td>
-                            <td class="align-middle">R$  0</td>
+                            <td class="align-middle">R$ 0</td>
                             <td class="align-middle">
                                 <div class="input-group quantity mx-auto" style="width: 100px;">
                                     <div class="input-group-btn">
@@ -242,11 +242,11 @@
     <!-- JavaScript -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
-    <script src="lib/easing/easing.min.js"></script>
-    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
+    <script src="content/bibliotecas_extra/easing/easing.min.js"></script>
+    <script src="content/bibliotecas_extra/owlcarousel/owl.carousel.min.js"></script>
 
     <!-- Template Javascript -->
-    <script src="js/main.js"></script>
+    <script src="content/javascript/main.js"></script>
 </body>
 
 </html>
