--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
 
     <!-- Libraries Stylesheet -->
-    <link href="lib/animate/animate.min.css" rel="stylesheet">
-    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+    <link href="content/bibliotecas_extra/animate/animate.min.css" rel="stylesheet">
+    <link href="content/bibliotecas_extra/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
 
     <!-- Css bootstrap customizável -->
-    <link href="css/style.css" rel="stylesheet">
+    <link href="content/css/style.css" rel="stylesheet">
 </head>
 
 <body>
