--- a/produtos.html
+++ b/produtos.html
@@ -7,7 +7,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
     <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
+    <link href="content/imagens/favicon.ico" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -165,7 +165,7 @@
                     <div class="col-lg-3 col-md-4 col-sm-6 pb-1">
                         <div class="product-item bg-light mb-4">
                             <div class="product-img position-relative overflow-hidden">
-                                <img class="img-fluid w-100" src="img/produto-1.jpg" alt="">
+                                <img class="img-fluid w-100" src="content/imagens/produto-1.jpg" alt="">
                                 <div class="product-action">
                                     <a class="btn btn-outline-dark btn-square" href="carrinho.html"><i
                                             class="fa fa-shopping-cart"></i></a>
@@ -195,7 +195,7 @@
                     <div class="col-lg-3 col-md-4 col-sm-6 pb-1">
                         <div class="product-item bg-light mb-4">
                             <div class="product-img position-relative overflow-hidden">
-                                <img class="img-fluid w-100" src="img/produto-2.jpg" alt="">
+                                <img class="img-fluid w-100" src="content/imagens/produto-2.jpg" alt="">
                                 <div class="product-action">
                                     <a class="btn btn-outline-dark btn-square" href="carrinho.html"><i
                                             class="fa fa-shopping-cart"></i></a>
@@ -225,7 +225,7 @@
                     <div class="col-lg-3 col-md-4 col-sm-6 pb-1">
                         <div class="product-item bg-light mb-4">
                             <div class="product-img position-relative overflow-hidden">
-                                <img class="img-fluid w-100" src="img/produto-3.jpg" alt="">
+                                <img class="img-fluid w-100" src="content/imagens/produto-3.jpg" alt="">
                                 <div class="product-action">
                                     <a class="btn btn-outline-dark btn-square" href="carrinho.html"><i
                                             class="fa fa-shopping-cart"></i></a>
@@ -254,7 +254,7 @@
                     <div class="col-lg-3 col-md-4 col-sm-6 pb-1">
                         <div class="product-item bg-light mb-4">
                             <div class="product-img position-relative overflow-hidden">
-                                <img class="img-fluid w-100" src="img/produto-4.jpg" alt="">
+                                <img class="img-fluid w-100" src="content/imagens/produto-4.jpg" alt="">
                                 <div class="product-action">
                                     <a class="btn btn-outline-dark btn-square" href="carrinho.html"><i
                                             class="fa fa-shopping-cart"></i></a>
@@ -284,7 +284,7 @@
                     <div class="col-lg-3 col-md-4 col-sm-6 pb-1">
                         <div class="product-item bg-light mb-4">
                             <div class="product-img position-relative overflow-hidden">
-                                <img class="img-fluid w-100" src="img/produto-5.jpg" alt="">
+                                <img class="img-fluid w-100" src="content/imagens/produto-5.jpg" alt="">
                                 <div class="product-action">
                                     <a class="btn btn-outline-dark btn-square" href="carrinho.html"><i
                                             class="fa fa-shopping-cart"></i></a>
@@ -313,7 +313,7 @@
                     <div class="col-lg-3 col-md-4 col-sm-6 pb-1">
                         <div class="product-item bg-light mb-4">
                             <div class="product-img position-relative overflow-hidden">
-                                <img class="img-fluid w-100" src="img/produto-6.jpg" alt="">
+                                <img class="img-fluid w-100" src="content/imagens/produto-6.jpg" alt="">
                                 <div class="product-action">
                                     <a class="btn btn-outline-dark btn-square" href="carrinho.html"><i
                                             class="fa fa-shopping-cart"></i></a>
@@ -342,7 +342,7 @@
                     <div class="col-lg-3 col-md-4 col-sm-6 pb-1">
                         <div class="product-item bg-light mb-4">
                             <div class="product-img position-relative overflow-hidden">
-                                <img class="img-fluid w-100" src="img/produto-7.jpg" alt="">
+                                <img class="img-fluid w-100" src="content/imagens/produto-7.jpg" alt="">
                                 <div class="product-action">
                                     <a class="btn btn-outline-dark btn-square" href="carrinho.html"><i
                                             class="fa fa-shopping-cart"></i></a>
@@ -370,7 +370,7 @@
                     <div class="col-lg-3 col-md-4 col-sm-6 pb-1">
                         <div class="product-item bg-light mb-4">
                             <div class="product-img position-relative overflow-hidden">
-                                <img class="img-fluid w-100" src="img/produto-8.jpg" alt="">
+                                <img class="img-fluid w-100" src="content/imagens/produto-8.jpg" alt="">
                                 <div class="product-action">
                                     <a class="btn btn-outline-dark btn-square" href="carrinho.html"><i
                                             class="fa fa-shopping-cart"></i></a>
