--- a/produto-1.html
+++ b/produto-1.html
@@ -7,7 +7,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
     <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
+    <link href="content/imagens/favicon.ico" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -122,16 +122,16 @@
                 <div id="produto-carrossel" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner bg-light">
                         <div class="carousel-item active">
-                            <img class="w-100 h-100" src="img/produto-5.jpg" alt="Image">
+                            <img class="w-100 h-100" src="content/imagens/produto-5.jpg" alt="Image">
                         </div>
                         <div class="carousel-item">
-                            <img class="w-100 h-100" src="img/produto-6.jpg" alt="Image">
+                            <img class="w-100 h-100" src="content/imagens/produto-6.jpg" alt="Image">
                         </div>
                         <div class="carousel-item">
-                            <img class="w-100 h-100" src="img/produto-7.jpg" alt="Image">
+                            <img class="w-100 h-100" src="content/imagens/produto-7.jpg" alt="Image">
                         </div>
                         <div class="carousel-item">
-                            <img class="w-100 h-100" src="img/produto-8.jpg" alt="Image">
+                            <img class="w-100 h-100" src="content/imagens/produto-8.jpg" alt="Image">
                         </div>
                     </div>
                     <a class="carousel-control-prev" href="#produto-carrossel" data-slide="prev">
