adicionei o db.json

--- a/produtos.html
+++ b/produtos.html
@@ -30,6 +30,7 @@
 
     <!-- JavaScript -->
     <script type="module" src="js/productCard.js"></script>
+    <script type="module" src="js/dbScript.js"></script>
   </head>
 
   <body>
@@ -246,181 +247,8 @@
         <!-- Produtos -->
         <div class="col-lg-9 col-md-8">
           <div class="row pb-3">
-            <div class="col-lg-3 col-md-4 col-sm-6 pb-1">
-              <div class="product-item bg-light mb-4">
-                <product-card>
-                  <img
-                    slot="img-product"
-                    class="img-fluid w-100"
-                    src="img/produto-1.jpg"
-                    alt=""
-                  />
-                  <a
-                    slot="product"
-                    class="h6 text-decoration-none text-truncate"
-                    href="produto-1.html"
-                    >Ração de Cachorro
-                  </a>
-                  <h5 slot="price-product">R$ 200.00</h5>
-                  <h6 slot="old-price-product" class="text-muted ml-2">
-                    <del>R$ 215.00</del>
-                  </h6>
-                </product-card>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 pb-1">
-              <div class="product-item bg-light mb-4">
-                <product-card>
-                  <img
-                    slot="img-product"
-                    class="img-fluid w-100"
-                    src="img/produto-2.jpg"
-                    alt=""
-                  />
-                  <a
-                    slot="product"
-                    class="h6 text-decoration-none text-truncate"
-                    href="produto-1.html"
-                    >Sementes de Girassol
-                  </a>
-                  <h5 slot="price-product">R$ 4.00</h5>
-                  <h6 slot="old-price-product" class="text-muted ml-2">
-                    <del>R$ 6.00</del>
-                  </h6>
-                </product-card>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 pb-1">
-              <div class="product-item bg-light mb-4">
-                <product-card>
-                  <img
-                    slot="img-product"
-                    class="img-fluid w-100"
-                    src="img/produto-3.jpg"
-                    alt=""
-                  />
-                  <a
-                    slot="product"
-                    class="h6 text-decoration-none text-truncate"
-                    href="produto-1.html"
-                    >Gaiola Média
-                  </a>
-                  <h5 slot="price-product">R$ 123.00</h5>
-                  <h6 slot="old-price-product" class="text-muted ml-2">
-                    <del>R$ 143.00</del>
-                  </h6>
-                </product-card>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 pb-1">
-              <div class="product-item bg-light mb-4">
-                <product-card>
-                  <img
-                    slot="img-product"
-                    class="img-fluid w-100"
-                    src="img/produto-4.jpg"
-                    alt=""
-                  />
-                  <a
-                    slot="product"
-                    class="h6 text-decoration-none text-truncate"
-                    href="produto-1.html"
-                    >Aquário grande 30L
-                  </a>
-                  <h5 slot="price-product">R$ 221.00</h5>
-                  <h6 slot="old-price-product" class="text-muted ml-2">
-                    <del>R$ 249.99</del>
-                  </h6>
-                </product-card>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 pb-1">
-              <div class="product-item bg-light mb-4">
-                <product-card>
-                  <img
-                    slot="img-product"
-                    class="img-fluid w-100"
-                    src="img/produto-5.jpg"
-                    alt=""
-                  />
-                  <a
-                    slot="product"
-                    class="h6 text-decoration-none text-truncate"
-                    href="produto-1.html"
-                    >Ração de gato
-                  </a>
-                  <h5 slot="price-product">R$ 30.00</h5>
-                  <h6 slot="old-price-product" class="text-muted ml-2">
-                    <del>R$ 45.99</del>
-                  </h6>
-                </product-card>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 pb-1">
-              <div class="product-item bg-light mb-4">
-                <product-card>
-                  <img
-                    slot="img-product"
-                    class="img-fluid w-100"
-                    src="img/produto-6.jpg"
-                    alt=""
-                  />
-                  <a
-                    slot="product"
-                    class="h6 text-decoration-none text-truncate"
-                    href="produto-1.html"
-                    >Areia de gato Biodegradável
-                  </a>
-                  <h5 slot="price-product">R$ 23.25</h5>
-                  <h6 slot="old-price-product" class="text-muted ml-2">
-                    <del>R$ 30.00</del>
-                  </h6>
-                </product-card>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 pb-1">
-              <div class="product-item bg-light mb-4">
-                <product-card>
-                  <img
-                    slot="img-product"
-                    class="img-fluid w-100"
-                    src="img/produto-7.jpg"
-                    alt=""
-                  />
-                  <a
-                    slot="product"
-                    class="h6 text-decoration-none text-truncate"
-                    href="produto-1.html"
-                    >Kit 150 Brinquedos para cachorros
-                  </a>
-                  <h5 slot="price-product">R$ 150.00</h5>
-                  <h6 slot="old-price-product" class="text-muted ml-2">
-                    <del>R$ 199.99</del>
-                  </h6>
-                </product-card>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 pb-1">
-              <div class="product-item bg-light mb-4">
-                <product-card>
-                  <img
-                    slot="img-product"
-                    class="img-fluid w-100"
-                    src="img/produto-8.jpg"
-                    alt=""
-                  />
-                  <a
-                    slot="product"
-                    class="h6 text-decoration-none text-truncate"
-                    href="produto-1.html"
-                    >Ração para tartaruga
-                  </a>
-                  <h5 slot="price-product">R$ 78.90</h5>
-                  <h6 slot="old-price-product" class="text-muted ml-2">
-                    <del>R$ 109.99</del>
-                  </h6>
-                </product-card>
-              </div>
+            <div id="product-list" class="row pb-3">
+              <!-- Products loaded here -->
             </div>
             <div class="col-12">
               <nav>
