Adicionada funcionalidade do carrinho

--- a/finalizar.html
+++ b/finalizar.html
@@ -230,21 +230,20 @@
             <span class="bg-secondary pr-3">Total do Pedido</span>
           </h5>
           <div class="bg-light p-30 mb-5">
-            <div class="border-bottom">
-              <h6 class="mb-3">Produtos</h6>
-            </div>
-            <div class="border-bottom pt-3 pb-2">
+            <div class="border-bottom pb-2">
               <div class="d-flex justify-content-between mb-3">
-                <h6>Total</h6>
+                <h6>Subtotal</h6>
+                <h6 class="subtotal">R$ 0,00</h6>
               </div>
               <div class="d-flex justify-content-between">
-                <h6 class="font-weight-medium">Descontos</h6>
+                <h6 class="font-weight-medium">Desconto</h6>
+                <h6 class="font-weight-medium discount">R$ 0,00</h6>
               </div>
             </div>
-            <div class="pt-2">
+            <div class="border-bottom pt-3 pb-2">
               <div class="d-flex justify-content-between mt-2">
                 <h5>Total</h5>
-                <h5>R$ 0</h5>
+                <h5 class="total">R$ 0,00</h5>
               </div>
             </div>
           </div>
