--- a/carrinho.html
+++ b/carrinho.html
@@ -139,7 +139,7 @@
                 <a href="carrinho.html" class="btn px-0 ml-3">
                   <i class="fas fa-shopping-cart text-primary"></i>
                   <span
-                    class="badge text-secondary border border-secondary rounded-circle"
+                    class="badge text-secondary border border-secondary rounded-circle cart-count"
                     style="padding-bottom: 2px"
                     >0</span
                   >
@@ -169,41 +169,7 @@
               </tr>
             </thead>
             <tbody class="align-middle">
-              <tr>
-                <td class="align-middle">
-                  <img src="img/product-5.jpg" alt="" style="width: 50px" />
-                  Nome do produto
-                </td>
-                <td class="align-middle">R$ 0</td>
-                <td class="align-middle">
-                  <div
-                    class="input-group quantity mx-auto"
-                    style="width: 100px"
-                  >
-                    <div class="input-group-btn">
-                      <button class="btn btn-sm btn-primary btn-minus">
-                        <i class="fa fa-minus"></i>
-                      </button>
-                    </div>
-                    <input
-                      type="text"
-                      class="form-control form-control-sm bg-secondary border-0 text-center"
-                      value="0"
-                    />
-                    <div class="input-group-btn">
-                      <button class="btn btn-sm btn-primary btn-plus">
-                        <i class="fa fa-plus"></i>
-                      </button>
-                    </div>
-                  </div>
-                </td>
-                <td class="align-middle">R$ 0</td>
-                <td class="align-middle">
-                  <button class="btn btn-sm btn-danger">
-                    <i class="fa fa-times"></i>
-                  </button>
-                </td>
-              </tr>
+              <!-- O JavaScript vai preencher o conteúdo da tabela -->
             </tbody>
           </table>
         </div>
@@ -226,18 +192,18 @@
           <div class="bg-light p-30 mb-5">
             <div class="border-bottom pb-2">
               <div class="d-flex justify-content-between mb-3">
-                <h6>Total</h6>
-                <h6>R$ 0</h6>
+                <h6>Subtotal</h6>
+                <h6 class="subtotal">R$ 0,00</h6>
               </div>
               <div class="d-flex justify-content-between">
                 <h6 class="font-weight-medium">Desconto</h6>
-                <h6 class="font-weight-medium">R$ 0</h6>
+                <h6 class="font-weight-medium discount">R$ 0,00</h6>
               </div>
             </div>
             <div class="pt-2">
               <div class="d-flex justify-content-between mt-2">
                 <h5>Total</h5>
-                <h5>R$ 0</h5>
+                <h5 class="total">R$ 0,00</h5>
               </div>
               <a href="finalizar.html">
                 <button
@@ -325,5 +291,131 @@
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
+
+    <script>
+      document.addEventListener("DOMContentLoaded", () => {
+        const cartTableBody = document.querySelector("tbody.align-middle");
+        const subtotalElem = document.querySelector(".subtotal");
+        const discountElem = document.querySelector(".discount");
+        const totalElem = document.querySelector(".total");
+
+        function getCart() {
+          const cart = localStorage.getItem("cart");
+          return cart ? JSON.parse(cart) : [];
+        }
+
+        function saveCart(cart) {
+          localStorage.setItem("cart", JSON.stringify(cart));
+        }
+
+        function updateCart() {
+          const cart = getCart();
+          cartTableBody.innerHTML = "";
+
+          cart.forEach((product) => {
+            const total = (product.preco_novo * product.quantity).toFixed(2);
+            const productRow = `
+        <tr data-id="${product.id}">
+          <td class="align-middle">
+            <img src="${product.imagem}" alt="${
+              product.nome
+            }" style="width: 50px" />
+            ${product.nome}
+          </td>
+          <td class="align-middle">R$ ${product.preco_novo.toFixed(2)}</td>
+          <td class="align-middle">
+            <div class="input-group quantity mx-auto" style="width: 100px">
+              <div class="input-group-btn">
+                <button class="btn btn-sm btn-primary btn-minus">
+                  <i class="fa fa-minus"></i>
+                </button>
+              </div>
+              <input
+                type="text"
+                class="form-control form-control-sm bg-secondary border-0 text-center"
+                value="${product.quantity}"
+              />
+              <div class="input-group-btn">
+                <button class="btn btn-sm btn-primary btn-plus">
+                  <i class="fa fa-plus"></i>
+                </button>
+              </div>
+            </div>
+          </td>
+          <td class="align-middle">R$ ${total}</td>
+          <td class="align-middle">
+            <button class="btn btn-sm btn-danger btn-remove">
+              <i class="fa fa-times"></i>
+            </button>
+          </td>
+        </tr>
+      `;
+            cartTableBody.insertAdjacentHTML("beforeend", productRow);
+          });
+
+          updateTotals();
+          addEventListeners();
+        }
+
+        function updateTotals() {
+          const cart = getCart();
+          const subtotal = cart.reduce(
+            (sum, item) => sum + item.preco_novo * item.quantity,
+            0
+          );
+          const discount = 0;
+          const total = subtotal - discount;
+
+          subtotalElem.textContent = `R$ ${subtotal.toFixed(2)}`;
+          discountElem.textContent = `R$ ${discount.toFixed(2)}`;
+          totalElem.textContent = `R$ ${total.toFixed(2)}`;
+        }
+
+        function addEventListeners() {
+          const minusButtons = document.querySelectorAll(".btn-minus");
+          const plusButtons = document.querySelectorAll(".btn-plus");
+          const removeButtons = document.querySelectorAll(".btn-remove");
+
+          minusButtons.forEach((button) => {
+            button.addEventListener("click", () => {
+              const tr = button.closest("tr");
+              const id = tr.getAttribute("data-id");
+              let cart = getCart();
+              const product = cart.find((item) => item.id === id);
+              if (product.quantity > 1) {
+                product.quantity -= 1;
+              }
+              saveCart(cart);
+              updateCart();
+            });
+          });
+
+          plusButtons.forEach((button) => {
+            button.addEventListener("click", () => {
+              const tr = button.closest("tr");
+              const id = tr.getAttribute("data-id");
+              let cart = getCart();
+              const product = cart.find((item) => item.id === id);
+              product.quantity += 1;
+              saveCart(cart);
+              updateCart();
+            });
+          });
+
+          removeButtons.forEach((button) => {
+            button.addEventListener("click", () => {
+              const tr = button.closest("tr");
+              const id = tr.getAttribute("data-id");
+              let cart = getCart();
+              cart = cart.filter((item) => item.id !== id);
+              saveCart(cart);
+              updateCart();
+            });
+          });
+        }
+
+        updateCart();
+      });
+    </script>
   </body>
 </html>
