--- a/produtos.html
+++ b/produtos.html
@@ -143,7 +143,7 @@
                 <a href="carrinho.html" class="btn px-0 ml-3">
                   <i class="fas fa-shopping-cart text-primary"></i>
                   <span
-                    class="badge text-secondary border border-secondary rounded-circle"
+                    class="badge text-secondary border border-secondary rounded-circle cart-count"
                     style="padding-bottom: 2px"
                     >0</span
                   >
